--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/fire": "^6.1.5",
     "@angular/forms": "~11.0.9",
     "@angular/localize": "~11.0.9",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
@@ -26,6 +28,8 @@
     "firebase": "^8.9.1",
     "firebase-tools": "^9.16.5",
     "g": "^2.0.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.2",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
