--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "firebase": "^8.9.1",
     "firebase-tools": "^9.16.5",
     "g": "^2.0.1",
+    "ng2-validation": "^4.2.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.2",
     "rxjs": "^6.6.7",
